--- a/source/GithubX.UWP/App.xaml
+++ b/source/GithubX.UWP/App.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:GithubX.UWP"
+	xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:media="using:Windows.UI.Xaml.Media"
 	RequestedTheme="Dark">
 	<Application.Resources>
@@ -13,6 +14,8 @@
 				<ResourceDictionary Source="Theme\ColorPalette.xaml"/>
 				<!--<ResourceDictionary Source="CompactSize.xaml"/>-->
 			</ResourceDictionary.MergedDictionaries>
+			<x:Int32 x:Key="DefaultWidth">240</x:Int32>
+			<x:Int32 x:Key="DefaultCorner">6</x:Int32>
 			<Color x:Key="AcrylicBrushTintColor1">#eee</Color>
 			<Color x:Key="AcrylicBrushFallbackColor1">#eee</Color>
 			<media:AcrylicBrush x:Key="HeaderAcrylic" 
@@ -20,12 +23,156 @@
                                         TintOpacity="0.8" 
                                         TintColor="#66ffffff" 
                                         FallbackColor="#eee"/>
-
 			<media:AcrylicBrush x:Key="DialogBoxAcrylicBrush" 
                             BackgroundSource="Backdrop" 
                             TintOpacity="0.1" 
                             TintColor="#19FFFFFF" 
                             FallbackColor="#FFF" />
+
+
+			<Style TargetType="Grid" x:Key="CardGrid">
+				<Setter Property="Background" Value="{ThemeResource CardColor}"/>
+				<Setter Property="HorizontalAlignment" Value="Stretch"/>
+				<Setter Property="CornerRadius" Value="6"/>
+				<Setter Property="Width" Value="{ThemeResource DefaultWidth}"/>
+			</Style>
+			<Style TargetType="StackPanel" x:Key="CardStack">
+				<Setter Property="Background" Value="{ThemeResource CardColor}"/>
+				<Setter Property="Margin" Value="0 4 4 4"/>
+				<Setter Property="Padding" Value="8 4"/>
+				<Setter Property="HorizontalAlignment" Value="Stretch"/>
+				<Setter Property="CornerRadius" Value="6"/>
+				<Setter Property="Width" Value="{ThemeResource DefaultWidth}"/>
+			</Style>
+			<Style TargetType="toolkit:DropShadowPanel" x:Key="ShadowCard">
+				<Setter Property="ShadowOpacity" Value=".2"/>
+				<Setter Property="OffsetX" Value="0"/>
+				<Setter Property="OffsetY" Value="3"/>
+				<Setter Property="BlurRadius" Value="10"/>
+				<Setter Property="Color" Value="{ThemeResource RBaseColor}"/>
+				<Setter Property="HorizontalAlignment" Value="Stretch"/>
+				<Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+			</Style>
+			
+			<Style TargetType="toolkit:ImageEx" x:Key="ImageCard">
+				<Setter Property="Margin" Value="8 8 0 8"/>
+				<Setter Property="IsCacheEnabled" Value="True"/>
+				<Setter Property="Width" Value="52"/>
+				<Setter Property="Height" Value="52"/>
+				<Setter Property="PlaceholderSource" Value="ms-appx:///Assets/Files/Placeholder.png"/>
+				<Setter Property="HorizontalAlignment" Value="Center"/>
+				<Setter Property="VerticalAlignment" Value="Center"/>
+				<Setter Property="PlaceholderStretch" Value="UniformToFill"/>
+				<Setter Property="Stretch" Value="UniformToFill"/>
+				<Setter Property="CornerRadius" Value="6"/>
+			</Style>
+
+			<Style x:Key="CircleButtonStyle" TargetType="Button">
+				<Setter Property="Height" Value="42"/>
+				<Setter Property="Width" Value="42"/>
+				<Setter Property="Background" Value="{ThemeResource ButtonBackground}" />
+				<Setter Property="Foreground" Value="{ThemeResource ButtonForeground}" />
+				<Setter Property="BorderBrush" Value="{ThemeResource ButtonBorderBrush}" />
+				<Setter Property="BorderThickness" Value="{ThemeResource ButtonBorderThemeThickness}" />
+				<Setter Property="Padding" Value="8,4,8,4" />
+				<Setter Property="HorizontalAlignment" Value="Left" />
+				<Setter Property="VerticalAlignment" Value="Center" />
+				<Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}" />
+				<Setter Property="FontWeight" Value="Normal" />
+				<Setter Property="FontSize" Value="{ThemeResource ControlContentThemeFontSize}" />
+				<Setter Property="UseSystemFocusVisuals" Value="True" />
+				<Setter Property="FocusVisualMargin" Value="-3" />
+				<Setter Property="Template">
+					<Setter.Value>
+						<ControlTemplate TargetType="Button">
+							<Grid x:Name="RootGrid"
+              Background="{TemplateBinding Background}"
+              CornerRadius="100,100,100,100">
+								<VisualStateManager.VisualStateGroups>
+									<VisualStateGroup x:Name="CommonStates">
+										<VisualState x:Name="Normal">
+											<Storyboard>
+												<PointerUpThemeAnimation Storyboard.TargetName="RootGrid" />
+											</Storyboard>
+										</VisualState>
+										<VisualState x:Name="PointerOver">
+											<Storyboard>
+												<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background"
+                                                 Storyboard.TargetName="RootGrid">
+													<DiscreteObjectKeyFrame KeyTime="0"
+                                            Value="{ThemeResource ButtonBackgroundPointerOver}" />
+												</ObjectAnimationUsingKeyFrames>
+												<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderBrush"
+                                                 Storyboard.TargetName="ContentPresenter">
+													<DiscreteObjectKeyFrame KeyTime="0"
+                                            Value="{ThemeResource ButtonBorderBrushPointerOver}" />
+												</ObjectAnimationUsingKeyFrames>
+												<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground"
+                                                 Storyboard.TargetName="ContentPresenter">
+													<DiscreteObjectKeyFrame KeyTime="0"
+                                            Value="{ThemeResource ButtonForegroundPointerOver}" />
+												</ObjectAnimationUsingKeyFrames>
+												<PointerUpThemeAnimation Storyboard.TargetName="RootGrid" />
+											</Storyboard>
+										</VisualState>
+										<VisualState x:Name="Pressed">
+											<Storyboard>
+												<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background"
+                                                 Storyboard.TargetName="RootGrid">
+													<DiscreteObjectKeyFrame KeyTime="0"
+                                            Value="{ThemeResource ButtonBackgroundPressed}" />
+												</ObjectAnimationUsingKeyFrames>
+												<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderBrush"
+                                                 Storyboard.TargetName="ContentPresenter">
+													<DiscreteObjectKeyFrame KeyTime="0"
+                                            Value="{ThemeResource ButtonBorderBrushPressed}" />
+												</ObjectAnimationUsingKeyFrames>
+												<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground"
+                                                 Storyboard.TargetName="ContentPresenter">
+													<DiscreteObjectKeyFrame KeyTime="0"
+                                            Value="{ThemeResource ButtonForegroundPressed}" />
+												</ObjectAnimationUsingKeyFrames>
+												<PointerDownThemeAnimation Storyboard.TargetName="RootGrid" />
+											</Storyboard>
+										</VisualState>
+										<VisualState x:Name="Disabled">
+											<Storyboard>
+												<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background"
+                                                 Storyboard.TargetName="RootGrid">
+													<DiscreteObjectKeyFrame KeyTime="0"
+                                            Value="{ThemeResource ButtonBackgroundDisabled}" />
+												</ObjectAnimationUsingKeyFrames>
+												<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderBrush"
+                                                 Storyboard.TargetName="ContentPresenter">
+													<DiscreteObjectKeyFrame KeyTime="0"
+                                            Value="{ThemeResource ButtonBorderBrushDisabled}" />
+												</ObjectAnimationUsingKeyFrames>
+												<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground"
+                                                 Storyboard.TargetName="ContentPresenter">
+													<DiscreteObjectKeyFrame KeyTime="0"
+                                            Value="{ThemeResource ButtonForegroundDisabled}" />
+												</ObjectAnimationUsingKeyFrames>
+											</Storyboard>
+										</VisualState>
+									</VisualStateGroup>
+								</VisualStateManager.VisualStateGroups>
+
+								<ContentPresenter x:Name="ContentPresenter"
+                            AutomationProperties.AccessibilityView="Raw"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            ContentTemplate="{TemplateBinding ContentTemplate}"
+                            ContentTransitions="{TemplateBinding ContentTransitions}"
+                            Content="{TemplateBinding Content}"
+                            HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                            Padding="{TemplateBinding Padding}"
+                            VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                            CornerRadius="100,100,100,100" />
+							</Grid>
+						</ControlTemplate>
+					</Setter.Value>
+				</Setter>
+			</Style>
 		</ResourceDictionary>
 	</Application.Resources>
 </Application>
