--- a/source/GithubX.UWP/Views/MarkdownPage.xaml
+++ b/source/GithubX.UWP/Views/MarkdownPage.xaml
@@ -1,13 +1,13 @@
-﻿<ContentDialog
-    x:Class="GithubX.UWP.Views.Dialogs.SettingsDialog"
+﻿<Page
+    x:Class="GithubX.UWP.Views.MarkdownPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GithubX.UWP.Views.Dialogs"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Title="TITLE">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
+
     </Grid>
-</ContentDialog>
+</Page>
