--- a/source/GithubX.UWP/Views/ProfilePage.xaml
+++ b/source/GithubX.UWP/Views/ProfilePage.xaml
@@ -3,17 +3,20 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:GithubX.UWP.Views"
+    xmlns:ctrl="using:GithubX.UWP.Views.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
-	NavigationCacheMode="Enabled"
+	NavigationCacheMode="Enabled" RequestedTheme="Light"
 	mc:Ignorable="d" Loaded="Page_Loaded">
 	<Hub>
-		<HubSection Header="Profile" Width="220" HorizontalContentAlignment="Stretch"
-					Background="{ThemeResource SystemRevealListLowColor}">
+		<HubSection Header="Profile" Width="{ThemeResource DefaultWidth}" 
+					HorizontalContentAlignment="Stretch"
+					Background="{ThemeResource SystemRevealListMediumColor}">
 			<DataTemplate>
 				<StackPanel>
 					<toolkit:ImageEx Margin="0" Background="Gray" CornerRadius="6"
+									 Stretch="UniformToFill" PlaceholderSource="ms-appx:///Assets/Files/Placeholder.png"
 									 HorizontalAlignment="Left" Height="140" Width="140"/>
 					<RichTextBlock Margin="0 4" FontFamily="Candara">
 						<Paragraph FontSize="26">
@@ -46,19 +49,24 @@
 				</StackPanel>
 			</DataTemplate>
 		</HubSection>
-		<HubSection Header="Notification">
+		<HubSection Header="Notification" Background="{ThemeResource SystemRevealListLowColor}">
 			<DataTemplate>
-				<Grid>
-					<GridView IsItemClickEnabled="True" IsSwipeEnabled="True"
-					 CanDragItems="False" SelectionMode="Single"
+				<GridView IsItemClickEnabled="True" IsSwipeEnabled="True"
+					 CanDragItems="False" SelectionMode="None" Padding="8" Margin="-8"
 					 ItemClick="Notification_ItemClick" ItemsSource="{Binding}">
-						<GridView.ItemsPanel>
-							<ItemsPanelTemplate>
-								<ItemsWrapGrid Orientation="Vertical" />
-							</ItemsPanelTemplate>
-						</GridView.ItemsPanel>
-					</GridView>
-				</Grid>
+					<GridView.ItemsPanel>
+						<ItemsPanelTemplate>
+							<ItemsWrapGrid Orientation="Vertical" />
+						</ItemsPanelTemplate>
+					</GridView.ItemsPanel>
+					<GridView.ItemTemplate>
+						<DataTemplate>
+							<StackPanel>
+								<ctrl:NotificationItem/>
+							</StackPanel>
+						</DataTemplate>
+					</GridView.ItemTemplate>
+				</GridView>
 			</DataTemplate>
 		</HubSection>
 	</Hub>
