--- a/source/GithubX.UWP/Views/FollowPage.xaml
+++ b/source/GithubX.UWP/Views/FollowPage.xaml
@@ -5,10 +5,51 @@
     xmlns:local="using:GithubX.UWP.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
-    <Grid>
-
-    </Grid>
+	xmlns:ctrl="using:GithubX.UWP.Views.Controls"
+	mc:Ignorable="d">
+	<Grid>
+		<Hub>
+			<HubSection Header="TAG}">
+				<DataTemplate>
+					<GridView IsItemClickEnabled="True" IsSwipeEnabled="True"
+					 CanDragItems="False" SelectionMode="None" Padding="8" Margin="-8"
+					 ItemsSource="{Binding}">
+						<GridView.ItemsPanel>
+							<ItemsPanelTemplate>
+								<ItemsWrapGrid Orientation="Vertical" />
+							</ItemsPanelTemplate>
+						</GridView.ItemsPanel>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+						<ctrl:UserItem/>
+					</GridView>
+				</DataTemplate>
+			</HubSection>
+		</Hub>
+	</Grid>
 </Page>
