--- a/source/GithubX.UWP/Views/RepositoryPage.xaml
+++ b/source/GithubX.UWP/Views/RepositoryPage.xaml
@@ -5,10 +5,6 @@
     xmlns:local="using:GithubX.UWP.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    mc:Ignorable="d">
 
-    <Grid>
-
-    </Grid>
 </Page>
