--- a/source/GithubX.UWP/App.xaml
+++ b/source/GithubX.UWP/App.xaml
@@ -1,75 +1,77 @@
 ﻿<Application
-    x:Class="GithubX.UWP.App"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GithubX.UWP"
+	x:Class="GithubX.UWP.App"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:local="using:GithubX.UWP"
+	xmlns:media="using:Windows.UI.Xaml.Media"
 	xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
-    xmlns:media="using:Windows.UI.Xaml.Media"
 	RequestedTheme="Dark">
 	<Application.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
 				<!--<XamlControlsResources  xmlns="using:Microsoft.UI.Xaml.Controls"/>-->
-				<ResourceDictionary Source="Theme\Theme.xaml"/>
-				<ResourceDictionary Source="Theme\ColorPalette.xaml"/>
+				<ResourceDictionary Source="Theme\Theme.xaml" />
+				<ResourceDictionary Source="Theme\ColorPalette.xaml" />
 				<!--<ResourceDictionary Source="CompactSize.xaml"/>-->
 			</ResourceDictionary.MergedDictionaries>
 			<x:Int32 x:Key="DefaultWidth">240</x:Int32>
 			<x:Int32 x:Key="DefaultCorner">6</x:Int32>
 			<Color x:Key="AcrylicBrushTintColor1">#eee</Color>
 			<Color x:Key="AcrylicBrushFallbackColor1">#eee</Color>
-			<media:AcrylicBrush x:Key="HeaderAcrylic" 
-                                        BackgroundSource="HostBackdrop" 
-                                        TintOpacity="0.8" 
-                                        TintColor="#66ffffff" 
-                                        FallbackColor="#eee"/>
-			<media:AcrylicBrush x:Key="DialogBoxAcrylicBrush" 
-                            BackgroundSource="Backdrop" 
-                            TintOpacity="0.1" 
-                            TintColor="#19FFFFFF" 
-                            FallbackColor="#FFF" />
+			<media:AcrylicBrush
+				x:Key="HeaderAcrylic"
+				BackgroundSource="HostBackdrop"
+				FallbackColor="#eee"
+				TintColor="#66ffffff"
+				TintOpacity="0.8" />
+			<media:AcrylicBrush
+				x:Key="DialogBoxAcrylicBrush"
+				BackgroundSource="Backdrop"
+				FallbackColor="#FFF"
+				TintColor="#19FFFFFF"
+				TintOpacity="0.1" />
 
 
-			<Style TargetType="Grid" x:Key="CardGrid">
-				<Setter Property="Background" Value="{ThemeResource CardColor}"/>
-				<Setter Property="HorizontalAlignment" Value="Stretch"/>
-				<Setter Property="CornerRadius" Value="6"/>
-				<Setter Property="Width" Value="{ThemeResource DefaultWidth}"/>
+			<Style x:Key="CardGrid" TargetType="Grid">
+				<Setter Property="Background" Value="{ThemeResource CardColor}" />
+				<Setter Property="HorizontalAlignment" Value="Stretch" />
+				<Setter Property="CornerRadius" Value="6" />
+				<Setter Property="Width" Value="{ThemeResource DefaultWidth}" />
 			</Style>
-			<Style TargetType="StackPanel" x:Key="CardStack">
-				<Setter Property="Background" Value="{ThemeResource CardColor}"/>
-				<Setter Property="Margin" Value="0 4 4 4"/>
-				<Setter Property="Padding" Value="8 4"/>
-				<Setter Property="HorizontalAlignment" Value="Stretch"/>
-				<Setter Property="CornerRadius" Value="6"/>
-				<Setter Property="Width" Value="{ThemeResource DefaultWidth}"/>
+			<Style x:Key="CardStack" TargetType="StackPanel">
+				<Setter Property="Background" Value="{ThemeResource CardColor}" />
+				<Setter Property="Margin" Value="0,4,4,4" />
+				<Setter Property="Padding" Value="8,4" />
+				<Setter Property="HorizontalAlignment" Value="Stretch" />
+				<Setter Property="CornerRadius" Value="6" />
+				<Setter Property="Width" Value="{ThemeResource DefaultWidth}" />
 			</Style>
-			<Style TargetType="toolkit:DropShadowPanel" x:Key="ShadowCard">
-				<Setter Property="ShadowOpacity" Value=".2"/>
-				<Setter Property="OffsetX" Value="0"/>
-				<Setter Property="OffsetY" Value="3"/>
-				<Setter Property="BlurRadius" Value="10"/>
-				<Setter Property="Color" Value="{ThemeResource RBaseColor}"/>
-				<Setter Property="HorizontalAlignment" Value="Stretch"/>
-				<Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+			<Style x:Key="ShadowCard" TargetType="toolkit:DropShadowPanel">
+				<Setter Property="ShadowOpacity" Value=".2" />
+				<Setter Property="OffsetX" Value="0" />
+				<Setter Property="OffsetY" Value="3" />
+				<Setter Property="BlurRadius" Value="10" />
+				<Setter Property="Color" Value="{ThemeResource RBaseColor}" />
+				<Setter Property="HorizontalAlignment" Value="Stretch" />
+				<Setter Property="HorizontalContentAlignment" Value="Stretch" />
 			</Style>
-			
-			<Style TargetType="toolkit:ImageEx" x:Key="ImageCard">
-				<Setter Property="Margin" Value="8 8 0 8"/>
-				<Setter Property="IsCacheEnabled" Value="True"/>
-				<Setter Property="Width" Value="52"/>
-				<Setter Property="Height" Value="52"/>
-				<Setter Property="PlaceholderSource" Value="ms-appx:///Assets/Files/Placeholder.png"/>
-				<Setter Property="HorizontalAlignment" Value="Center"/>
-				<Setter Property="VerticalAlignment" Value="Center"/>
-				<Setter Property="PlaceholderStretch" Value="UniformToFill"/>
-				<Setter Property="Stretch" Value="UniformToFill"/>
-				<Setter Property="CornerRadius" Value="6"/>
+
+			<Style x:Key="ImageCard" TargetType="toolkit:ImageEx">
+				<Setter Property="Margin" Value="8,8,0,8" />
+				<Setter Property="IsCacheEnabled" Value="True" />
+				<Setter Property="Width" Value="52" />
+				<Setter Property="Height" Value="52" />
+				<Setter Property="PlaceholderSource" Value="ms-appx:///Assets/Files/Placeholder.png" />
+				<Setter Property="HorizontalAlignment" Value="Center" />
+				<Setter Property="VerticalAlignment" Value="Center" />
+				<Setter Property="PlaceholderStretch" Value="UniformToFill" />
+				<Setter Property="Stretch" Value="UniformToFill" />
+				<Setter Property="CornerRadius" Value="6" />
 			</Style>
 
 			<Style x:Key="CircleButtonStyle" TargetType="Button">
-				<Setter Property="Height" Value="42"/>
-				<Setter Property="Width" Value="42"/>
+				<Setter Property="Height" Value="42" />
+				<Setter Property="Width" Value="42" />
 				<Setter Property="Background" Value="{ThemeResource ButtonBackground}" />
 				<Setter Property="Foreground" Value="{ThemeResource ButtonForeground}" />
 				<Setter Property="BorderBrush" Value="{ThemeResource ButtonBorderBrush}" />
@@ -85,9 +87,22 @@
 				<Setter Property="Template">
 					<Setter.Value>
 						<ControlTemplate TargetType="Button">
-							<Grid x:Name="RootGrid"
-              Background="{TemplateBinding Background}"
-              CornerRadius="100,100,100,100">
+							<Grid
+								x:Name="RootGrid"
+								Background="{TemplateBinding Background}"
+								CornerRadius="100,100,100,100">
+								<ContentPresenter
+									x:Name="ContentPresenter"
+									Padding="{TemplateBinding Padding}"
+									HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+									VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+									AutomationProperties.AccessibilityView="Raw"
+									BorderBrush="{TemplateBinding BorderBrush}"
+									BorderThickness="{TemplateBinding BorderThickness}"
+									Content="{TemplateBinding Content}"
+									ContentTemplate="{TemplateBinding ContentTemplate}"
+									ContentTransitions="{TemplateBinding ContentTransitions}"
+									CornerRadius="100,100,100,100" />
 								<VisualStateManager.VisualStateGroups>
 									<VisualStateGroup x:Name="CommonStates">
 										<VisualState x:Name="Normal">
@@ -97,77 +112,47 @@
 										</VisualState>
 										<VisualState x:Name="PointerOver">
 											<Storyboard>
-												<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background"
-                                                 Storyboard.TargetName="RootGrid">
-													<DiscreteObjectKeyFrame KeyTime="0"
-                                            Value="{ThemeResource ButtonBackgroundPointerOver}" />
+												<ObjectAnimationUsingKeyFrames Storyboard.TargetName="RootGrid" Storyboard.TargetProperty="Background">
+													<DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource ButtonBackgroundPointerOver}" />
 												</ObjectAnimationUsingKeyFrames>
-												<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderBrush"
-                                                 Storyboard.TargetName="ContentPresenter">
-													<DiscreteObjectKeyFrame KeyTime="0"
-                                            Value="{ThemeResource ButtonBorderBrushPointerOver}" />
+												<ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter" Storyboard.TargetProperty="BorderBrush">
+													<DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource ButtonBorderBrushPointerOver}" />
 												</ObjectAnimationUsingKeyFrames>
-												<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground"
-                                                 Storyboard.TargetName="ContentPresenter">
-													<DiscreteObjectKeyFrame KeyTime="0"
-                                            Value="{ThemeResource ButtonForegroundPointerOver}" />
+												<ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter" Storyboard.TargetProperty="Foreground">
+													<DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource ButtonForegroundPointerOver}" />
 												</ObjectAnimationUsingKeyFrames>
 												<PointerUpThemeAnimation Storyboard.TargetName="RootGrid" />
 											</Storyboard>
 										</VisualState>
 										<VisualState x:Name="Pressed">
 											<Storyboard>
-												<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background"
-                                                 Storyboard.TargetName="RootGrid">
-													<DiscreteObjectKeyFrame KeyTime="0"
-                                            Value="{ThemeResource ButtonBackgroundPressed}" />
+												<ObjectAnimationUsingKeyFrames Storyboard.TargetName="RootGrid" Storyboard.TargetProperty="Background">
+													<DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource ButtonBackgroundPressed}" />
 												</ObjectAnimationUsingKeyFrames>
-												<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderBrush"
-                                                 Storyboard.TargetName="ContentPresenter">
-													<DiscreteObjectKeyFrame KeyTime="0"
-                                            Value="{ThemeResource ButtonBorderBrushPressed}" />
+												<ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter" Storyboard.TargetProperty="BorderBrush">
+													<DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource ButtonBorderBrushPressed}" />
 												</ObjectAnimationUsingKeyFrames>
-												<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground"
-                                                 Storyboard.TargetName="ContentPresenter">
-													<DiscreteObjectKeyFrame KeyTime="0"
-                                            Value="{ThemeResource ButtonForegroundPressed}" />
+												<ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter" Storyboard.TargetProperty="Foreground">
+													<DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource ButtonForegroundPressed}" />
 												</ObjectAnimationUsingKeyFrames>
 												<PointerDownThemeAnimation Storyboard.TargetName="RootGrid" />
 											</Storyboard>
 										</VisualState>
 										<VisualState x:Name="Disabled">
 											<Storyboard>
-												<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background"
-                                                 Storyboard.TargetName="RootGrid">
-													<DiscreteObjectKeyFrame KeyTime="0"
-                                            Value="{ThemeResource ButtonBackgroundDisabled}" />
+												<ObjectAnimationUsingKeyFrames Storyboard.TargetName="RootGrid" Storyboard.TargetProperty="Background">
+													<DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource ButtonBackgroundDisabled}" />
 												</ObjectAnimationUsingKeyFrames>
-												<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderBrush"
-                                                 Storyboard.TargetName="ContentPresenter">
-													<DiscreteObjectKeyFrame KeyTime="0"
-                                            Value="{ThemeResource ButtonBorderBrushDisabled}" />
+												<ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter" Storyboard.TargetProperty="BorderBrush">
+													<DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource ButtonBorderBrushDisabled}" />
 												</ObjectAnimationUsingKeyFrames>
-												<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground"
-                                                 Storyboard.TargetName="ContentPresenter">
-													<DiscreteObjectKeyFrame KeyTime="0"
-                                            Value="{ThemeResource ButtonForegroundDisabled}" />
+												<ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter" Storyboard.TargetProperty="Foreground">
+													<DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource ButtonForegroundDisabled}" />
 												</ObjectAnimationUsingKeyFrames>
 											</Storyboard>
 										</VisualState>
 									</VisualStateGroup>
 								</VisualStateManager.VisualStateGroups>
-
-								<ContentPresenter x:Name="ContentPresenter"
-                            AutomationProperties.AccessibilityView="Raw"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}"
-                            ContentTemplate="{TemplateBinding ContentTemplate}"
-                            ContentTransitions="{TemplateBinding ContentTransitions}"
-                            Content="{TemplateBinding Content}"
-                            HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
-                            Padding="{TemplateBinding Padding}"
-                            VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
-                            CornerRadius="100,100,100,100" />
 							</Grid>
 						</ControlTemplate>
 					</Setter.Value>
