--- a/source/GithubX.UWP/Theme/Theme.xaml
+++ b/source/GithubX.UWP/Theme/Theme.xaml
@@ -1,10 +1,34 @@
-﻿<ResourceDictionary
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 	<ResourceDictionary.ThemeDictionaries>
 		<ResourceDictionary x:Key="Default">
 			<ResourceDictionary.MergedDictionaries>
-				<ColorPaletteResources Accent="#FF44BD32" AltHigh="#FF000000" AltLow="#FF000000" AltMedium="#FF000000" AltMediumHigh="#FF000000" AltMediumLow="#FF000000" BaseHigh="#FFFFFFFF" BaseLow="#FF333333" BaseMedium="#FF9A9A9A" BaseMediumHigh="#FFB4B4B4" BaseMediumLow="#FF676767" ChromeAltLow="#FFB4B4B4" ChromeBlackHigh="#FF000000" ChromeBlackLow="#FFB4B4B4" ChromeBlackMedium="#FF000000" ChromeBlackMediumLow="#FF000000" ChromeDisabledHigh="#FF333333" ChromeDisabledLow="#FF9A9A9A" ChromeGray="#FF808080" ChromeHigh="#FF808080" ChromeLow="#FF151515" ChromeMedium="#FF1D1D1D" ChromeMediumLow="#FF2C2C2C" ChromeWhite="#FFFFFFFF" ListLow="#FF1D1D1D" ListMedium="#FF333333" />
+				<ColorPaletteResources
+					Accent="#FF44BD32"
+					AltHigh="#FF000000"
+					AltLow="#FF000000"
+					AltMedium="#FF000000"
+					AltMediumHigh="#FF000000"
+					AltMediumLow="#FF000000"
+					BaseHigh="#FFFFFFFF"
+					BaseLow="#FF333333"
+					BaseMedium="#FF9A9A9A"
+					BaseMediumHigh="#FFB4B4B4"
+					BaseMediumLow="#FF676767"
+					ChromeAltLow="#FFB4B4B4"
+					ChromeBlackHigh="#FF000000"
+					ChromeBlackLow="#FFB4B4B4"
+					ChromeBlackMedium="#FF000000"
+					ChromeBlackMediumLow="#FF000000"
+					ChromeDisabledHigh="#FF333333"
+					ChromeDisabledLow="#FF9A9A9A"
+					ChromeGray="#FF808080"
+					ChromeHigh="#FF808080"
+					ChromeLow="#FF151515"
+					ChromeMedium="#FF1D1D1D"
+					ChromeMediumLow="#FF2C2C2C"
+					ChromeWhite="#FFFFFFFF"
+					ListLow="#FF1D1D1D"
+					ListMedium="#FF333333" />
 				<ResourceDictionary>
 					<Color x:Key="SystemChromeAltMediumHighColor">#CC111111</Color>
 					<Color x:Key="SystemChromeAltHighColor">#FF111111</Color>
@@ -20,13 +44,43 @@
 		</ResourceDictionary>
 		<ResourceDictionary x:Key="Light">
 			<ResourceDictionary.MergedDictionaries>
-				<ColorPaletteResources Accent="#FF44BD32" AltHigh="#FFFFFFFF" AltLow="#FFFFFFFF" AltMedium="#FFFFFFFF" AltMediumHigh="#FFFFFFFF" AltMediumLow="#FFFFFFFF" BaseHigh="#FF000000" BaseLow="#FFCCCCCC" BaseMedium="#FF898989" BaseMediumHigh="#FF5D5D5D" BaseMediumLow="#FF737373" ChromeAltLow="#FF5D5D5D" ChromeBlackHigh="#FF000000" ChromeBlackLow="#FFCCCCCC" ChromeBlackMedium="#FF5D5D5D" ChromeBlackMediumLow="#FF898989" ChromeDisabledHigh="#FFCCCCCC" ChromeDisabledLow="#FF898989" ChromeGray="#FF737373" ChromeHigh="#FFCCCCCC" ChromeLow="#FFECECEC" ChromeMedium="#FFE6E6E6" ChromeMediumLow="#FFECECEC" ChromeWhite="#FFFFFFFF" ListLow="#FFE6E6E6" ListMedium="#FFCCCCCC" />
+				<ColorPaletteResources
+					Accent="#FF44BD32"
+					AltHigh="#FFFFFFFF"
+					AltLow="#FFFFFFFF"
+					AltMedium="#FFFFFFFF"
+					AltMediumHigh="#FFFFFFFF"
+					AltMediumLow="#FFFFFFFF"
+					BaseHigh="#FF000000"
+					BaseLow="#FFCCCCCC"
+					BaseMedium="#FF898989"
+					BaseMediumHigh="#FF5D5D5D"
+					BaseMediumLow="#FF737373"
+					ChromeAltLow="#FF5D5D5D"
+					ChromeBlackHigh="#FF000000"
+					ChromeBlackLow="#FFCCCCCC"
+					ChromeBlackMedium="#FF5D5D5D"
+					ChromeBlackMediumLow="#FF898989"
+					ChromeDisabledHigh="#FFCCCCCC"
+					ChromeDisabledLow="#FF898989"
+					ChromeGray="#FF737373"
+					ChromeHigh="#FFCCCCCC"
+					ChromeLow="#FFECECEC"
+					ChromeMedium="#FFE6E6E6"
+					ChromeMediumLow="#FFECECEC"
+					ChromeWhite="#FFFFFFFF"
+					ListLow="#FFE6E6E6"
+					ListMedium="#FFCCCCCC" />
 				<ResourceDictionary>
 					<Color x:Key="SystemChromeAltMediumHighColor">#CCFAFAFA</Color>
 					<Color x:Key="SystemChromeAltHighColor">#FFFAFAFA</Color>
 					<Color x:Key="SystemRevealListLowColor">#FFE6E6E6</Color>
 					<Color x:Key="SystemRevealListMediumColor">#FFCCCCCC</Color>
-					<RevealBackgroundBrush x:Key="SystemControlHighlightListLowRevealBackgroundBrush" TargetTheme="Light" Color="{ThemeResource SystemRevealListMediumColor}" FallbackColor="{ StaticResource SystemListMediumColor}" />
+					<RevealBackgroundBrush
+						x:Key="SystemControlHighlightListLowRevealBackgroundBrush"
+						FallbackColor="{StaticResource SystemListMediumColor}"
+						TargetTheme="Light"
+						Color="{ThemeResource SystemRevealListMediumColor}" />
 					<Color x:Key="RegionColor">#FFFAFAFA</Color>
 					<Color x:Key="CardColor">#FFFFFFFF</Color>
 					<Color x:Key="BaseColor">#FFFFFFFF</Color>
