--- a/source/GithubX.UWP/Views/Controls/CategoryItem.xaml
+++ b/source/GithubX.UWP/Views/Controls/CategoryItem.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="GithubX.UWP.Views.Controls.CategoriesItem"
+    x:Class="GithubX.UWP.Views.Controls.CategoryItem"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:GithubX.UWP.Views.Controls"
