--- a/source/GithubX.UWP/Views/ProfilePage.xaml
+++ b/source/GithubX.UWP/Views/ProfilePage.xaml
@@ -7,7 +7,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
-	NavigationCacheMode="Enabled" RequestedTheme="Light"
+	NavigationCacheMode="Enabled"
 	mc:Ignorable="d" Loaded="Page_Loaded">
 	<Hub>
 		<HubSection Header="Profile" Width="{ThemeResource DefaultWidth}" 
