--- a/source/GithubX.UWP/Views/Controls/ActivityItem.xaml
+++ b/source/GithubX.UWP/Views/Controls/ActivityItem.xaml
@@ -1,16 +1,16 @@
 ﻿<UserControl
-    x:Class="GithubX.UWP.Views.Controls.ActivityItem"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GithubX.UWP.Views.Controls"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	x:Class="GithubX.UWP.Views.Controls.ActivityItem"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:local="using:GithubX.UWP.Views.Controls"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
 	mc:Ignorable="d">
 	<StackPanel>
-		<TextBlock Margin="0 4" FontWeight="SemiLight" >
-			<Run Text="Ali"/> <Run Text="forked" FontWeight="Bold"/> <Run Text="yazdipour/githubx"/>
+		<TextBlock Margin="0,4" FontWeight="SemiLight">
+			<Run Text="Ali" /> <Run FontWeight="Bold" Text="forked" /> <Run Text="yazdipour/githubx" />
 		</TextBlock>
-		<local:RepositoryItem/>
+		<local:RepositoryItem />
 	</StackPanel>
 </UserControl>
