--- a/source/GithubX.UWP/Views/Controls/GistItem.xaml
+++ b/source/GithubX.UWP/Views/Controls/GistItem.xaml
@@ -1,20 +1,26 @@
 ﻿<UserControl
-    x:Class="GithubX.UWP.Views.Controls.GistItem"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GithubX.UWP.Views.Controls"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	x:Class="GithubX.UWP.Views.Controls.GistItem"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:local="using:GithubX.UWP.Views.Controls"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
-	mc:Ignorable="d"
-    d:DesignHeight="300"
-    d:DesignWidth="400">
-	<toolkit:DropShadowPanel Style="{StaticResource ShadowCard}" >
+	d:DesignHeight="300"
+	d:DesignWidth="400"
+	mc:Ignorable="d">
+	<toolkit:DropShadowPanel Style="{StaticResource ShadowCard}">
 		<StackPanel Style="{StaticResource CardStack}">
-			<TextBlock MaxLines="3" TextWrapping="Wrap" 
-					   VerticalAlignment="Center" 
-					   Grid.Column="1" Margin="8 0" >
-				<Run Text="Bind full_name"/><LineBreak/><Run FontWeight="SemiLight" Text="Description" FontSize="11" />
+			<TextBlock
+				Grid.Column="1"
+				Margin="8,0"
+				VerticalAlignment="Center"
+				MaxLines="3"
+				TextWrapping="Wrap">
+				<Run Text="Bind full_name" /><LineBreak /><Run
+					FontSize="11"
+					FontWeight="SemiLight"
+					Text="Description" />
 			</TextBlock>
 		</StackPanel>
 	</toolkit:DropShadowPanel>
