--- a/source/GithubX.UWP/Views/Controls/NotificationItem.xaml
+++ b/source/GithubX.UWP/Views/Controls/NotificationItem.xaml
@@ -1,27 +1,45 @@
 ﻿<UserControl
-    x:Class="GithubX.UWP.Views.Controls.NotificationItem"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GithubX.UWP.Views.Controls"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	x:Class="GithubX.UWP.Views.Controls.NotificationItem"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:local="using:GithubX.UWP.Views.Controls"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
-	mc:Ignorable="d"
-    d:DesignHeight="300"
-    d:DesignWidth="400">
+	d:DesignHeight="300"
+	d:DesignWidth="400"
+	mc:Ignorable="d">
 	<toolkit:DropShadowPanel Style="{StaticResource ShadowCard}">
-			
+
 		<Grid Style="{StaticResource CardGrid}">
 			<Grid.ColumnDefinitions>
-				<ColumnDefinition Width="Auto"/>
-				<ColumnDefinition Width="*"/>
-				<ColumnDefinition Width="Auto"/>
-				<ColumnDefinition Width="Auto"/>
+				<ColumnDefinition Width="Auto" />
+				<ColumnDefinition Width="*" />
+				<ColumnDefinition Width="Auto" />
+				<ColumnDefinition Width="Auto" />
 			</Grid.ColumnDefinitions>
-			<TextBlock Text="❌" FontSize="22" Margin="4 8" VerticalAlignment="Center"/>
-			<TextBlock Grid.Column="1" MaxLines="1" VerticalAlignment="Center" Text="Favorites" FontFamily="Candara"/>
-			<SymbolIcon Grid.Column="2" Symbol="Mute" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-			<SymbolIcon Grid.Column="3" Symbol="Accept" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="8 0"/>
+			<TextBlock
+				Margin="4,8"
+				VerticalAlignment="Center"
+				FontSize="22"
+				Text="❌" />
+			<TextBlock
+				Grid.Column="1"
+				VerticalAlignment="Center"
+				FontFamily="Candara"
+				MaxLines="1"
+				Text="Favorites" />
+			<SymbolIcon
+				Grid.Column="2"
+				HorizontalAlignment="Right"
+				VerticalAlignment="Center"
+				Symbol="Mute" />
+			<SymbolIcon
+				Grid.Column="3"
+				Margin="8,0"
+				HorizontalAlignment="Right"
+				VerticalAlignment="Center"
+				Symbol="Accept" />
 		</Grid>
 	</toolkit:DropShadowPanel>
 </UserControl>
