--- a/source/GithubX.UWP/Views/Controls/RepositoryItem.xaml
+++ b/source/GithubX.UWP/Views/Controls/RepositoryItem.xaml
@@ -1,36 +1,50 @@
 ﻿<UserControl
-    x:Class="GithubX.UWP.Views.Controls.RepositoryItem"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GithubX.UWP.Views.Controls"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	x:Class="GithubX.UWP.Views.Controls.RepositoryItem"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:local="using:GithubX.UWP.Views.Controls"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
-	mc:Ignorable="d"
-    d:DesignHeight="300"
-    d:DesignWidth="400">
+	d:DesignHeight="300"
+	d:DesignWidth="400"
+	mc:Ignorable="d">
 	<toolkit:DropShadowPanel Style="{StaticResource ShadowCard}">
 		<Grid Style="{StaticResource CardGrid}">
 			<Grid.ColumnDefinitions>
-				<ColumnDefinition Width="Auto"/>
-				<ColumnDefinition Width="*"/>
-				<ColumnDefinition Width="12"/>
+				<ColumnDefinition Width="Auto" />
+				<ColumnDefinition Width="*" />
+				<ColumnDefinition Width="12" />
 			</Grid.ColumnDefinitions>
-			<!--x:Phase="3"-->
-			<toolkit:ImageEx Style="{StaticResource ImageCard}"
-							 CornerRadius="6"
-							 Source="x:Bind owner.avatar_url" />
-			<TextBlock MaxLines="3" TextWrapping="Wrap" 
-					   VerticalAlignment="Center" 
-					   Grid.Column="1" Margin="8 0" >
-				<Run Text="Bind full_name"/><LineBreak/><Run FontWeight="SemiLight" Text="Description" FontSize="11" />
+			<!--  x:Phase="3"  -->
+			<toolkit:ImageEx
+				CornerRadius="6"
+				Source="x:Bind owner.avatar_url"
+				Style="{StaticResource ImageCard}" />
+			<TextBlock
+				Grid.Column="1"
+				Margin="8,0"
+				VerticalAlignment="Center"
+				MaxLines="3"
+				TextWrapping="Wrap">
+				<Run Text="Bind full_name" /><LineBreak /><Run
+					FontSize="11"
+					FontWeight="SemiLight"
+					Text="Description" />
 			</TextBlock>
-			<Border Grid.Column="2" Grid.RowSpan="2">
-				<Border Background="Green" HorizontalAlignment="Center" Width="125">
-					<TextBlock Text="JavaScript" HorizontalAlignment="Center" 
-							Height="20" FontSize="11"
-							FontWeight="SemiBold" Foreground="White" 
-							RenderTransformOrigin="0.5,0.4">
+			<Border Grid.RowSpan="2" Grid.Column="2">
+				<Border
+					Width="125"
+					HorizontalAlignment="Center"
+					Background="Green">
+					<TextBlock
+						Height="20"
+						HorizontalAlignment="Center"
+						FontSize="11"
+						FontWeight="SemiBold"
+						Foreground="White"
+						RenderTransformOrigin="0.5,0.4"
+						Text="JavaScript">
 						<TextBlock.RenderTransform>
 							<RotateTransform Angle="90" />
 						</TextBlock.RenderTransform>
