--- a/source/GithubX.UWP/Views/ListPage.xaml
+++ b/source/GithubX.UWP/Views/ListPage.xaml
@@ -1,145 +1,206 @@
 ﻿<Page
-    x:Class="GithubX.UWP.Views.ListPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GithubX.UWP.Views"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
-    xmlns:media="using:Windows.UI.Xaml.Media"
-    NavigationCacheMode="Enabled"  
-    xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
-    xmlns:models="using:GithubX.Shared.Models"
-    mc:Ignorable="d">
-    <Page.Resources>
-        <Style TargetType="MenuFlyoutPresenter">
-            <Setter Property="RequestedTheme" Value="Dark" />
-        </Style>
-        <Style TargetType="GridViewItem">
-            <Setter Property="Margin" Value="4 8"/>
-        </Style>
-    </Page.Resources>
-    <Grid Margin="0 42 0 0">
-        <!--#region Grid.Definitions-->
-        <Grid.RowDefinitions>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="Auto"/>
-        </Grid.ColumnDefinitions>
-        <!--#endregion-->
+	x:Class="GithubX.UWP.Views.ListPage"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
+	xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:local="using:GithubX.UWP.Views"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:media="using:Windows.UI.Xaml.Media"
+	xmlns:models="using:GithubX.Shared.Models"
+	NavigationCacheMode="Enabled"
+	mc:Ignorable="d">
+	<Page.Resources>
+		<Style TargetType="MenuFlyoutPresenter">
+			<Setter Property="RequestedTheme" Value="Dark" />
+		</Style>
+		<Style TargetType="GridViewItem">
+			<Setter Property="Margin" Value="4,8" />
+		</Style>
+	</Page.Resources>
+	<Grid Margin="0,42,0,0">
+		<!--#region Grid.Definitions-->
+		<Grid.RowDefinitions>
+			<RowDefinition Height="50" />
+			<RowDefinition Height="*" />
+		</Grid.RowDefinitions>
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="Auto" />
+			<ColumnDefinition Width="*" />
+			<ColumnDefinition Width="Auto" />
+		</Grid.ColumnDefinitions>
+		<!--#endregion-->
 
-        <!--#region tab-->
-        <Button Content=""
-                VerticalAlignment="Bottom"
-                FontFamily="Segoe UI Symbol" 
-                Height="48" RequestedTheme="Light"
-                Foreground="Black" Click="CategorySetting_Click"
-                FontSize="20" Background="Transparent" Margin="28,0,0,0"/>
-        <ListView x:Name="tabList" 
-                  Height="48" 
-                  ScrollViewer.HorizontalScrollMode="Auto"
-                  ScrollViewer.HorizontalScrollBarVisibility="Hidden"
-                  VerticalAlignment="Bottom"
-                  IsItemClickEnabled="True"
-                  ItemClick="tabList_ItemClick" 
-                  FontFamily="Segoe UI Emoji" 
-                  Grid.Column="1">
-            <ListView.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <VirtualizingStackPanel Orientation="Horizontal" />
-                </ItemsPanelTemplate>
-            </ListView.ItemsPanel>
-            <ListView.ItemTemplate>
-                <DataTemplate x:DataType="models:Category" >
-                    <TextBlock Text="{x:Bind Text}" 
-                               Tag="{x:Bind Id}"
-                               FontSize="24" FontWeight="SemiLight" 
-                               AllowDrop="True" Drop="TextBlock_Drop" DragOver="TextBlock_DragOver"/>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-        <Button VerticalAlignment="Bottom"
-                RequestedTheme="Dark"
-                HorizontalAlignment="Right" 
-                Background="Transparent" 
-                Grid.Column="2">
-            <Button.Flyout>
-                <MenuFlyout>
-                    <MenuFlyoutItem Tag="0" Text="Refresh" Click="AvatarBtn_Click"/>
-                    <!--<MenuFlyoutItem Tag="1" Text="Backup all Categories" Click="AvatarBtn_Click"/>-->
-                    <MenuFlyoutItem Tag="2" Text="Switch Account" Click="AvatarBtn_Click"/>
-                    <MenuFlyoutSeparator/>
-                    <MenuFlyoutItem Tag="-1" Text="About" Click="AvatarBtn_Click"/>
-                </MenuFlyout>
-            </Button.Flyout>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="{x:Bind User.name}" VerticalAlignment="Center" Foreground="Black"/>
-                <controls:ImageEx Height="42" Width="42"
-                                       IsCacheEnabled="True"
-                                       PlaceholderSource="ms-appx:///Assets/Files/Placeholder.png"
-                                       Source="{x:Bind User.avatar_url,Mode=OneWay}" 
-                                       VerticalAlignment="Center" Margin="4 -4" PlaceholderStretch="UniformToFill"/>
-            </StackPanel>
-        </Button>
-        <!--#endregion-->
+		<!--#region tab-->
+		<Button
+			Height="48"
+			Margin="28,0,0,0"
+			VerticalAlignment="Bottom"
+			Background="Transparent"
+			Click="CategorySetting_Click"
+			Content=""
+			FontFamily="Segoe UI Symbol"
+			FontSize="20"
+			Foreground="Black"
+			RequestedTheme="Light" />
+		<ListView
+			x:Name="tabList"
+			Grid.Column="1"
+			Height="48"
+			VerticalAlignment="Bottom"
+			FontFamily="Segoe UI Emoji"
+			IsItemClickEnabled="True"
+			ItemClick="tabList_ItemClick"
+			ScrollViewer.HorizontalScrollBarVisibility="Hidden"
+			ScrollViewer.HorizontalScrollMode="Auto">
+			<ListView.ItemsPanel>
+				<ItemsPanelTemplate>
+					<VirtualizingStackPanel Orientation="Horizontal" />
+				</ItemsPanelTemplate>
+			</ListView.ItemsPanel>
+			<ListView.ItemTemplate>
+				<DataTemplate x:DataType="models:Category">
+					<TextBlock
+						AllowDrop="True"
+						DragOver="TextBlock_DragOver"
+						Drop="TextBlock_Drop"
+						FontSize="24"
+						FontWeight="SemiLight"
+						Tag="{x:Bind Id}"
+						Text="{x:Bind Title}" />
+				</DataTemplate>
+			</ListView.ItemTemplate>
+		</ListView>
+		<Button
+			Grid.Column="2"
+			HorizontalAlignment="Right"
+			VerticalAlignment="Bottom"
+			Background="Transparent"
+			RequestedTheme="Dark">
+			<Button.Flyout>
+				<MenuFlyout>
+					<MenuFlyoutItem
+						Click="AvatarBtn_Click"
+						Tag="0"
+						Text="Refresh" />
+					<!--<MenuFlyoutItem Tag="1" Text="Backup all Categories" Click="AvatarBtn_Click"/>-->
+					<MenuFlyoutItem
+						Click="AvatarBtn_Click"
+						Tag="2"
+						Text="Switch Account" />
+					<MenuFlyoutSeparator />
+					<MenuFlyoutItem
+						Click="AvatarBtn_Click"
+						Tag="-1"
+						Text="About" />
+				</MenuFlyout>
+			</Button.Flyout>
+			<StackPanel Orientation="Horizontal">
+				<TextBlock
+					VerticalAlignment="Center"
+					Foreground="Black"
+					Text="{x:Bind User.name}" />
+				<controls:ImageEx
+					Width="42"
+					Height="42"
+					Margin="4,-4"
+					VerticalAlignment="Center"
+					IsCacheEnabled="True"
+					PlaceholderSource="ms-appx:///Assets/Files/Placeholder.png"
+					PlaceholderStretch="UniformToFill"
+					Source="{x:Bind User.avatar_url, Mode=OneWay}" />
+			</StackPanel>
+		</Button>
+		<!--#endregion-->
 
-        <!--#region body-->
-            <controls:AdaptiveGridView x:Name="gridView" Grid.Row="1" Grid.ColumnSpan="3"
-                                   CanDragItems="True"
-                                   DragItemsStarting="gridView_DragItemsStarting"
-                                   ItemsSource="{x:Bind Repositories,Mode=OneWay}"
-                                   OneRowModeEnabled="False"
-                                   ItemHeight="125"
-                                   DesiredWidth="400"
-                                   Padding="16"
-                                   IsItemClickEnabled="True"
-                                   ItemClick="AdaptiveGridViewControl_ItemClick"
-                                   animations:Connected.ListItemElementName="ItemThumbnail"
-                                   animations:Connected.ListItemKey="listItem"
-                                   RightTapped="gridView_RightTapped">
-                <controls:AdaptiveGridView.ItemTemplate>
-                    <DataTemplate x:DataType="models:Repo">
-                        <controls:DropShadowPanel HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch" >
-                            <Grid Height="125" Background="White" HorizontalAlignment="Stretch" x:Name="ItemThumbnail">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="125"/>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="18"/>
-                                </Grid.ColumnDefinitions>
-                                <controls:ImageEx x:Phase="3"
-                                    IsCacheEnabled="True"
-                                    Source="{x:Bind owner.avatar_url}"
-                                    Height="125" Width="125"                                       
-                                    PlaceholderSource="ms-appx:///Assets/Files/Placeholder.png"
-                                    Stretch="UniformToFill"
-                                    HorizontalAlignment="Center"
-                                    VerticalAlignment="Center" 
-                                    PlaceholderStretch="UniformToFill" />
+		<!--#region body-->
+		<controls:AdaptiveGridView
+			x:Name="gridView"
+			Grid.Row="1"
+			Grid.ColumnSpan="3"
+			Padding="16"
+			animations:Connected.ListItemElementName="ItemThumbnail"
+			animations:Connected.ListItemKey="listItem"
+			CanDragItems="True"
+			DesiredWidth="400"
+			DragItemsStarting="gridView_DragItemsStarting"
+			IsItemClickEnabled="True"
+			ItemClick="AdaptiveGridViewControl_ItemClick"
+			ItemHeight="125"
+			ItemsSource="{x:Bind Repositories, Mode=OneWay}"
+			OneRowModeEnabled="False"
+			RightTapped="gridView_RightTapped">
+			<controls:AdaptiveGridView.ItemTemplate>
+				<DataTemplate x:DataType="models:Repo">
+					<controls:DropShadowPanel HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch">
+						<Grid
+							x:Name="ItemThumbnail"
+							Height="125"
+							HorizontalAlignment="Stretch"
+							Background="White">
+							<Grid.ColumnDefinitions>
+								<ColumnDefinition Width="125" />
+								<ColumnDefinition Width="*" />
+								<ColumnDefinition Width="18" />
+							</Grid.ColumnDefinitions>
+							<controls:ImageEx
+								Width="125"
+								Height="125"
+								HorizontalAlignment="Center"
+								VerticalAlignment="Center"
+								x:Phase="3"
+								IsCacheEnabled="True"
+								PlaceholderSource="ms-appx:///Assets/Files/Placeholder.png"
+								PlaceholderStretch="UniformToFill"
+								Source="{x:Bind owner.avatar_url}"
+								Stretch="UniformToFill" />
 
-                                <StackPanel Grid.Column="1" Margin="8 0" VerticalAlignment="Center">
-                                    <TextBlock Text="{x:Bind full_name}" FontWeight="Bold" FontSize="18"/>
-                                    <TextBlock Margin="0 4" MaxLines="2" TextWrapping="Wrap"
-                                   Text="{x:Bind description}" FontSize="14" FontWeight="SemiLight"/>
-                                </StackPanel>
+							<StackPanel
+								Grid.Column="1"
+								Margin="8,0"
+								VerticalAlignment="Center">
+								<TextBlock
+									FontSize="18"
+									FontWeight="Bold"
+									Text="{x:Bind full_name}" />
+								<TextBlock
+									Margin="0,4"
+									FontSize="14"
+									FontWeight="SemiLight"
+									MaxLines="2"
+									Text="{x:Bind description}"
+									TextWrapping="Wrap" />
+							</StackPanel>
 
-                                <Border Height="125" Width="18" Grid.Column="2" Grid.RowSpan="2">
-                                    <Border Background="{x:Bind Color}" HorizontalAlignment="Center" Height="125" Width="125">
-                                        <TextBlock Text="{x:Bind language}" HorizontalAlignment="Center" TextAlignment="Center" Height="20" Foreground="White" RenderTransformOrigin="0.5,0.5">
-                                            <TextBlock.RenderTransform>
-                                                <RotateTransform Angle="90" />
-                                            </TextBlock.RenderTransform>
-                                        </TextBlock>
-                                    </Border>
-                                </Border>
-                            </Grid>
-                        </controls:DropShadowPanel>
-                    </DataTemplate>
-                </controls:AdaptiveGridView.ItemTemplate>
-            </controls:AdaptiveGridView>
-        <!--#endregion-->
-    </Grid>
+							<Border
+								Grid.RowSpan="2"
+								Grid.Column="2"
+								Width="18"
+								Height="125">
+								<Border
+									Width="125"
+									Height="125"
+									HorizontalAlignment="Center"
+									Background="{x:Bind Color}">
+									<TextBlock
+										Height="20"
+										HorizontalAlignment="Center"
+										Foreground="White"
+										RenderTransformOrigin="0.5,0.5"
+										Text="{x:Bind language}"
+										TextAlignment="Center">
+										<TextBlock.RenderTransform>
+											<RotateTransform Angle="90" />
+										</TextBlock.RenderTransform>
+									</TextBlock>
+								</Border>
+							</Border>
+						</Grid>
+					</controls:DropShadowPanel>
+				</DataTemplate>
+			</controls:AdaptiveGridView.ItemTemplate>
+		</controls:AdaptiveGridView>
+		<!--#endregion-->
+	</Grid>
 </Page>
