--- a/source/GithubX.UWP/Views/LoginPage.xaml
+++ b/source/GithubX.UWP/Views/LoginPage.xaml
@@ -1,43 +1,48 @@
 ﻿<Page
-    x:Class="GithubX.UWP.Views.LoginPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GithubX.UWP.Views"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
+	x:Class="GithubX.UWP.Views.LoginPage"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:local="using:GithubX.UWP.Views"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	mc:Ignorable="d">
 	<Page.Resources>
 		<Style TargetType="TextBlock">
-			<Setter Property="FontWeight" Value="Light"/>
-			<Setter Property="HorizontalAlignment" Value="Center"/>
+			<Setter Property="FontWeight" Value="Light" />
+			<Setter Property="HorizontalAlignment" Value="Center" />
 		</Style>
 	</Page.Resources>
 	<Grid>
 		<StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-			<TextBlock Text="Welcome to" FontSize="18"/>
-			<TextBlock Text="Github✘" FontSize="58"/>
-			<TextBlock Text="👽" FontSize="68"/>
-			<TextBlock Text="Github Account" Margin="8"/>
-			<TextBox Width="180" x:Name="accTextBox"/>
+			<TextBlock FontSize="18" Text="Welcome to" />
+			<TextBlock FontSize="58" Text="Github✘" />
+			<TextBlock FontSize="68" Text="👽" />
+			<TextBlock Margin="8" Text="Github Account" />
+			<TextBox x:Name="accTextBox" Width="180" />
 
-			<Button Content="Lets Go" 
-                    HorizontalAlignment="Center"
-                    Margin="8"
-                    Click="Login_Click"
-                    Width="180"/>
+			<Button
+				Width="180"
+				Margin="8"
+				HorizontalAlignment="Center"
+				Click="Login_Click"
+				Content="Lets Go" />
 		</StackPanel>
-		<TextBlock VerticalAlignment="Bottom" Text="GithubX is a place to review and manage your starred repos readme (even offline)" Margin="8"/>
+		<TextBlock
+			Margin="8"
+			VerticalAlignment="Bottom"
+			Text="GithubX is a place to review and manage your starred repos readme (even offline)" />
 
 		<controls:Loading x:Name="LoadingControl" IsLoading="False">
 			<controls:Loading.Background>
-				<SolidColorBrush Color="Black" Opacity="0.7"/>
+				<SolidColorBrush Opacity="0.7" Color="Black" />
 			</controls:Loading.Background>
 			<StackPanel>
-				<ProgressRing IsEnabled="{x:Bind LoadingControl.IsLoading,Mode=OneWay}"
-                    VerticalAlignment="Center"
-                    HorizontalAlignment="Center"/>
-				<TextBlock Foreground="White" Text="Gadering Data ..."/>
+				<ProgressRing
+					HorizontalAlignment="Center"
+					VerticalAlignment="Center"
+					IsEnabled="{x:Bind LoadingControl.IsLoading, Mode=OneWay}" />
+				<TextBlock Foreground="White" Text="Gadering Data ..." />
 			</StackPanel>
 		</controls:Loading>
 	</Grid>
