--- a/source/GithubX.UWP/Views/MainPage.xaml
+++ b/source/GithubX.UWP/Views/MainPage.xaml
@@ -1,39 +1,56 @@
 ﻿<Page
-    x:Class="GithubX.UWP.Views.MainPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:media="using:Windows.UI.Xaml.Media"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
-    mc:Ignorable="d">
-    <Page.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.ThemeDictionaries>
-                <ResourceDictionary x:Key="Default">
-                    <media:AcrylicBrush x:Key="CustomAcrylicBackgroundBrush" BackgroundSource="HostBackdrop" 
-                                        TintOpacity="0.4" TintColor="{StaticResource AcrylicBrushTintColor1}" 
-                                        FallbackColor="{StaticResource AcrylicBrushFallbackColor1}"/>
-                </ResourceDictionary>
-            </ResourceDictionary.ThemeDictionaries>
-        </ResourceDictionary>
-    </Page.Resources>
-    <Grid Background="{ThemeResource CustomAcrylicBackgroundBrush}">
-        <Grid Background="{ThemeResource HeaderAcrylic}" x:Name="myTitleBar" VerticalAlignment="Top" Height="92" >
-            <TextBlock Text="Github✘" FontSize="16" Margin="32 8" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        </Grid>
-        <Frame x:Name="iframe" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
-        <controls:InAppNotification x:Name="Notif"
-                                    Content="Error!"
-                                    AnimationDuration="00:00:00.1000000"
-                                    VerticalOffset="100" BorderThickness="0"
-                                    HorizontalOffset="0">
-            <controls:InAppNotification.Background>
-                <LinearGradientBrush EndPoint="0,0" StartPoint="1,.5">
-                    <GradientStop Color="#0FF0B3"/>
-                    <GradientStop Color="#0470dc" Offset="1"/>
-                </LinearGradientBrush>
-            </controls:InAppNotification.Background>
-        </controls:InAppNotification>
-    </Grid>
+	x:Class="GithubX.UWP.Views.MainPage"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:media="using:Windows.UI.Xaml.Media"
+	mc:Ignorable="d">
+	<Page.Resources>
+		<ResourceDictionary>
+			<ResourceDictionary.ThemeDictionaries>
+				<ResourceDictionary x:Key="Default">
+					<media:AcrylicBrush
+						x:Key="CustomAcrylicBackgroundBrush"
+						BackgroundSource="HostBackdrop"
+						FallbackColor="{StaticResource AcrylicBrushFallbackColor1}"
+						TintColor="{StaticResource AcrylicBrushTintColor1}"
+						TintOpacity="0.4" />
+				</ResourceDictionary>
+			</ResourceDictionary.ThemeDictionaries>
+		</ResourceDictionary>
+	</Page.Resources>
+	<Grid Background="{ThemeResource CustomAcrylicBackgroundBrush}">
+		<Grid
+			x:Name="myTitleBar"
+			Height="92"
+			VerticalAlignment="Top"
+			Background="{ThemeResource HeaderAcrylic}">
+			<TextBlock
+				Margin="32,8"
+				HorizontalAlignment="Left"
+				VerticalAlignment="Top"
+				FontSize="16"
+				Text="Github✘" />
+		</Grid>
+		<Frame
+			x:Name="iframe"
+			HorizontalAlignment="Stretch"
+			VerticalAlignment="Stretch" />
+		<controls:InAppNotification
+			x:Name="Notif"
+			AnimationDuration="00:00:00.1000000"
+			BorderThickness="0"
+			Content="Error!"
+			HorizontalOffset="0"
+			VerticalOffset="100">
+			<controls:InAppNotification.Background>
+				<LinearGradientBrush StartPoint="1,.5" EndPoint="0,0">
+					<GradientStop Color="#0FF0B3" />
+					<GradientStop Offset="1" Color="#0470dc" />
+				</LinearGradientBrush>
+			</controls:InAppNotification.Background>
+		</controls:InAppNotification>
+	</Grid>
 </Page>
