--- a/source/GithubX.UWP/Views/MotherPage.xaml
+++ b/source/GithubX.UWP/Views/MotherPage.xaml
@@ -1,48 +1,67 @@
-﻿<Page
-    x:Class="GithubX.UWP.Views.MotherPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GithubX.UWP.Views"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+﻿<media:Page
+	x:Class="GithubX.UWP.Views.MotherPage"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:extensions="using:Microsoft.Toolkit.Uwp.UI.Extensions"
+	xmlns:local="using:GithubX.UWP.Views"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:media="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
-	xmlns:extensions="using:Microsoft.Toolkit.Uwp.UI.Extensions"
-    extensions:TitleBarExtensions.ButtonBackgroundColor="Transparent"
-    extensions:TitleBarExtensions.ButtonForegroundColor="White" 
+	extensions:TitleBarExtensions.ButtonBackgroundColor="Transparent"
+	extensions:TitleBarExtensions.ButtonForegroundColor="White"
+	Loaded="Page_Loaded"
 	RequestedTheme="Light"
-	Loaded="Page_Loaded" mc:Ignorable="d">
-	<Page.Resources>
-		<ResourceDictionary>
-			<ResourceDictionary.ThemeDictionaries>
-				<ResourceDictionary x:Key="Default">
-					<media:AcrylicBrush x:Key="CustomAcrylicBackgroundBrush" BackgroundSource="HostBackdrop" 
-                                        TintOpacity="0.4" TintColor="{StaticResource AcrylicBrushTintColor1}" 
-                                        FallbackColor="{StaticResource AcrylicBrushFallbackColor1}"/>
-				</ResourceDictionary>
-			</ResourceDictionary.ThemeDictionaries>
-		</ResourceDictionary>
-	</Page.Resources>
+	mc:Ignorable="d">
+	<media:Page.Resources>
+		<media:ResourceDictionary>
+			<media:ResourceDictionary.ThemeDictionaries>
+				<media:ResourceDictionary x:Key="Default">
+					<media:AcrylicBrush
+						x:Key="CustomAcrylicBackgroundBrush"
+						BackgroundSource="HostBackdrop"
+						FallbackColor="{StaticResource AcrylicBrushFallbackColor1}"
+						TintColor="{StaticResource AcrylicBrushTintColor1}"
+						TintOpacity="0.4" />
+				</media:ResourceDictionary>
+			</media:ResourceDictionary.ThemeDictionaries>
+		</media:ResourceDictionary>
+	</media:Page.Resources>
 
-	<Grid Background="{ThemeResource CustomAcrylicBackgroundBrush}">
-		<Grid.RowDefinitions>
-			<RowDefinition Height="32"/>
-			<RowDefinition Height="*"/>
-		</Grid.RowDefinitions>
-		<Grid Grid.Row="0" Height="32">
-			<TextBlock Text="Github✘" FontFamily="Candara" Foreground="Black"
-					   HorizontalAlignment="Center" VerticalAlignment="Center"/>
-		</Grid>
-		<Grid Grid.Row="1" Margin="16 0 16 16" CornerRadius="2" Background="{ThemeResource RegionBrush}">
-			<NavigationView x:Name="navigationView" IsSettingsVisible="True" BackRequested="navigationView_BackRequested"
-							SelectionChanged="NavigationView_SelectionChanged" 
-							PaneDisplayMode="Top" SelectionFollowsFocus="Enabled">
-				<Frame x:Name="iframe" Background="{ThemeResource SystemRevealListLowColor}"/>
-			</NavigationView>
-		</Grid>
-		<toolkit:InAppNotification x:Name="Notifer" ShowDismissButton="True"
-                                   AnimationDuration="00:00:00.1000000" 
-								   VerticalAlignment="Bottom" Grid.Row="1"
-								   BorderBrush="#EA2027"/>
-	</Grid>
-</Page>
+	<media:Grid Background="{ThemeResource CustomAcrylicBackgroundBrush}">
+		<media:Grid.RowDefinitions>
+			<media:RowDefinition Height="32" />
+			<media:RowDefinition Height="*" />
+		</media:Grid.RowDefinitions>
+		<media:Grid Grid.Row="0" Height="32">
+			<media:TextBlock
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				FontFamily="Candara"
+				Foreground="Black"
+				Text="Github✘" />
+		</media:Grid>
+		<media:Grid
+			Grid.Row="1"
+			Margin="16,0,16,16"
+			Background="{ThemeResource RegionBrush}"
+			CornerRadius="2">
+			<media:NavigationView
+				x:Name="navigationView"
+				BackRequested="navigationView_BackRequested"
+				IsSettingsVisible="True"
+				PaneDisplayMode="Top"
+				SelectionChanged="NavigationView_SelectionChanged"
+				SelectionFollowsFocus="Enabled">
+				<media:Frame x:Name="iframe" Background="{ThemeResource SystemRevealListLowColor}" />
+			</media:NavigationView>
+		</media:Grid>
+		<toolkit:InAppNotification
+			x:Name="Notifer"
+			Grid.Row="1"
+			VerticalAlignment="Bottom"
+			AnimationDuration="00:00:00.1000000"
+			BorderBrush="#EA2027"
+			ShowDismissButton="True" />
+	</media:Grid>
+</media:Page>
