--- a/source/GithubX.UWP/Views/SettingsDialog.xaml
+++ b/source/GithubX.UWP/Views/SettingsDialog.xaml
@@ -1,29 +1,38 @@
 ﻿<ContentDialog
-    x:Class="GithubX.UWP.Views.SettingsDialog"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GithubX.UWP.Views"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	x:Class="GithubX.UWP.Views.SettingsDialog"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:local="using:GithubX.UWP.Views"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
-	mc:Ignorable="d" 
-	Loaded="ContentDialog_Loaded" 
-    Title="SETTINGS">
-	<!--RequestedTheme="{x:Bind settings.app_theme}"-->
+	Title="SETTINGS"
+	Loaded="ContentDialog_Loaded"
+	mc:Ignorable="d">
+	<!--  RequestedTheme="{x:Bind settings.app_theme}"  -->
 	<Grid>
 		<ScrollViewer>
 			<StackPanel Orientation="Vertical">
 				<StackPanel>
-					<TextBlock Text="Application Theme"/>
-					<ToggleSwitch x:Name="tg_app" OffContent="Dark" OnContent="Light"/>
+					<TextBlock Text="Application Theme" />
+					<ToggleSwitch
+						x:Name="tg_app"
+						OffContent="Dark"
+						OnContent="Light" />
 				</StackPanel>
 				<StackPanel>
-					<TextBlock Text="Articles List Scrollbar"/>
-					<ToggleSwitch x:Name="tg_scrollbar" OffContent="Hidden" OnContent="Visible"/>
+					<TextBlock Text="Articles List Scrollbar" />
+					<ToggleSwitch
+						x:Name="tg_scrollbar"
+						OffContent="Hidden"
+						OnContent="Visible" />
 				</StackPanel>
 				<StackPanel VerticalAlignment="Center">
-					<TextBlock Text="Text Color"/>
-					<ToggleSwitch x:Name="tg_reader" OffContent="Dark" OnContent="Light" />
+					<TextBlock Text="Text Color" />
+					<ToggleSwitch
+						x:Name="tg_reader"
+						OffContent="Dark"
+						OnContent="Light" />
 				</StackPanel>
 				<StackPanel VerticalAlignment="Center">
 					<TextBlock Text="Text Style" />
@@ -41,53 +50,68 @@
 				</StackPanel>
 				<StackPanel Orientation="Vertical">
 					<TextBlock Text="Reader Background" />
-					<ColorPicker IsColorSliderVisible="True"
-                                     IsColorChannelTextInputVisible="False"
-                                     IsColorPreviewVisible="True"
-                                     IsHexInputVisible="False"
-                                     IsAlphaEnabled="False"  x:Name="colorPicker"
-										 />
-					<!--Color="{x:Bind settings.reader_bg}"-->
+					<ColorPicker
+						x:Name="colorPicker"
+						IsAlphaEnabled="False"
+						IsColorChannelTextInputVisible="False"
+						IsColorPreviewVisible="True"
+						IsColorSliderVisible="True"
+						IsHexInputVisible="False" />
+					<!--  Color="{x:Bind settings.reader_bg}"  -->
 				</StackPanel>
 
-				<!--About-->
-				<Image Source="ms-appx:///Assets/Icons/Logo.png" Height="84" Margin="0 24 0 0"/>
-				<RichTextBlock Margin="16" IsTextSelectionEnabled="False" TextAlignment="Center">
+				<!--  About  -->
+				<Image
+					Height="84"
+					Margin="0,24,0,0"
+					Source="ms-appx:///Assets/Icons/Logo.png" />
+				<RichTextBlock
+					Margin="16"
+					IsTextSelectionEnabled="False"
+					TextAlignment="Center">
 					<Paragraph>
-						<Run FontWeight="Bold" Text="Pocket✘"/>
-						<LineBreak/>
-						<Run Text="Unofficial Pocket Client"/>
-						<LineBreak/>
-						<Run Text="Developed with ❤ by "/>
+						<Run FontWeight="Bold" Text="Pocket✘" />
+						<LineBreak />
+						<Run Text="Unofficial Pocket Client" />
+						<LineBreak />
+						<Run Text="Developed with ❤ by " />
 						<Hyperlink Foreground="#7baaf7" NavigateUri="https://yazdipour.github.io/">Shahriar Yazdipour👦🏻</Hyperlink>
-						<LineBreak/>
+						<LineBreak />
 						<Hyperlink Foreground="#7baaf7" NavigateUri="https://yazdipour.github.io/apps">❄ Other Apps ❄</Hyperlink>
-						<LineBreak/>
-						<LineBreak/>
-						<Hyperlink NavigateUri="ms-windows-store:REVIEW?PFN=3783mindprojects.PocketX_6c8ydbw054cyy"
-                                       Foreground="#7baaf7" FontFamily="Segoe UI Emoji">⭐⭐RATE⭐⭐</Hyperlink>
-						<LineBreak/>
-						<LineBreak/>
+						<LineBreak />
+						<LineBreak />
+						<Hyperlink
+							FontFamily="Segoe UI Emoji"
+							Foreground="#7baaf7"
+							NavigateUri="ms-windows-store:REVIEW?PFN=3783mindprojects.PocketX_6c8ydbw054cyy">
+							⭐⭐RATE⭐⭐
+						</Hyperlink>
+						<LineBreak />
+						<LineBreak />
 						<Hyperlink Foreground="#7baaf7" NavigateUri="mailto:shahriar.yazdipour@outlook.com?subject=PocketX_FeedBack">
 							📜 Send a Feedback (Mail)
 						</Hyperlink>
-						<LineBreak/>
+						<LineBreak />
 						<Hyperlink Foreground="#7baaf7" NavigateUri="https://github.com/yazdipour/pocketx/issues">
 							🐞 Report Bugs (Github)
 						</Hyperlink>
-						<LineBreak/>
-						<LineBreak/>
+						<LineBreak />
+						<LineBreak />
 						<!--<Run Text="{x:Bind versionString}"/>-->
-						<LineBreak/>
+						<LineBreak />
 					</Paragraph>
 				</RichTextBlock>
-				<HyperlinkButton NavigateUri="https://www.payping.ir/yazdipour" HorizontalAlignment="Center">
-					<Image Source="ms-appx:///Assets/Icons/d_iran.png" Stretch="None"/>
+				<HyperlinkButton HorizontalAlignment="Center" NavigateUri="https://www.payping.ir/yazdipour">
+					<Image Source="ms-appx:///Assets/Icons/d_iran.png" Stretch="None" />
 				</HyperlinkButton>
 			</StackPanel>
 		</ScrollViewer>
-		<!--Close Windows Control-->
-		<Button Content="Close" Click="Close_Click" HorizontalAlignment="Right"
-                Margin="0 -32 0 0" VerticalAlignment="Top"/>
+		<!--  Close Windows Control  -->
+		<Button
+			Margin="0,-32,0,0"
+			HorizontalAlignment="Right"
+			VerticalAlignment="Top"
+			Click="Close_Click"
+			Content="Close" />
 	</Grid>
 </ContentDialog>
